# saviynt-config-wrangler

./: LICENSE  README.md  pyproject.toml  wrangle.py
src/saviynt_config_wrangler/: __init__.py
tests/: groovy_samples.py  json_samples.py  test_saviynt_config_wrangler.py  xml_samples.py
