# Copyright 2023 Oregon State University.  All Rights Reserved.
#
# Requests for more information can be directed to iamteam@oregonstate.edu |
# advantage@oregonstate.edu 


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saviynt-config-wrangler"
version = "1.0.2"
authors = [
    { name="Oregon State University - IAM", email="iamteam@oregonstate.edu" },
]
description = "Tools for wrangling Saviynt configuration"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "bs4",
  "lxml",
  "sqlparse",
]
